--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node slackApp.js"
+    "start": "nodemon slackApp.js"
   },
   "engines": {
     "node": "11.x"
@@ -27,5 +27,8 @@
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "moment": "^2.29.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
