--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@slack/bolt": "^3.11.1",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34"
   },
