--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34"
+    "moment-timezone": "^0.5.34",
+    "node-cache": "^5.1.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
