--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://https://github.com/Takodakko/envoy-slack#readme",
   "dependencies": {
-    "@envoy/envoy-integrations-sdk": "github:envoy/envoy-integrations-sdk-nodejs#enable-public-api",
+    "@envoy/envoy-integrations-sdk": "github:envoy/envoy-integrations-sdk-nodejs#unit-test",
     "@slack/bolt": "^3.11.1",
     "axios": "^0.27.2",
     "connect-redis": "^6.1.3",
